; ModuleID = '/home/carl/AnghaBench/redis/deps/jemalloc/src/extr_extent_dss.c_extent_dss_mergeable.c'
source_filename = "/home/carl/AnghaBench/redis/deps/jemalloc/src/extr_extent_dss.c_extent_dss_mergeable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@have_dss = common dso_local global i32 0, align 4
@dss_base = common dso_local global i64 0, align 8
@dss_max = common dso_local global i32 0, align 4
@ATOMIC_ACQUIRE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @extent_dss_mergeable(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i32, i32* @have_dss, align 4
  %8 = call i32 @cassert(i32 %7)
  %9 = load i8*, i8** %4, align 8
  %10 = ptrtoint i8* %9 to i64
  %11 = load i64, i64* @dss_base, align 8
  %12 = icmp ult i64 %10, %11
  br i1 %12, label %13, label %19

13:                                               ; preds = %2
  %14 = load i8*, i8** %5, align 8
  %15 = ptrtoint i8* %14 to i64
  %16 = load i64, i64* @dss_base, align 8
  %17 = icmp ult i64 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %13
  store i32 1, i32* %3, align 4
  br label %30

19:                                               ; preds = %13, %2
  %20 = load i32, i32* @ATOMIC_ACQUIRE, align 4
  %21 = call i8* @atomic_load_p(i32* @dss_max, i32 %20)
  store i8* %21, i8** %6, align 8
  %22 = load i8*, i8** %4, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = call i64 @extent_in_dss_helper(i8* %22, i8* %23)
  %25 = load i8*, i8** %5, align 8
  %26 = load i8*, i8** %6, align 8
  %27 = call i64 @extent_in_dss_helper(i8* %25, i8* %26)
  %28 = icmp eq i64 %24, %27
  %29 = zext i1 %28 to i32
  store i32 %29, i32* %3, align 4
  br label %30

30:                                               ; preds = %19, %18
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @cassert(i32) #1

declare dso_local i8* @atomic_load_p(i32*, i32) #1

declare dso_local i64 @extent_in_dss_helper(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
